# vscode-escript

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .vscodeignore  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml
client/: jest.e2e.config.js  package-lock.json  package.json
client/src/: PolDebugClient.ts  activatePolDebug.ts  commands.ts  extension.ts
client/src/test/: completion.test.ts  diagnostics.test.ts  helper.ts  index.ts  runTest.ts
client/test/: runTest.js
client/test/setup/: vscode-environment.js
client/test/suite/: foo.spec.ts  helpers.ts  index.js
common/: package-lock.json  package.json  tsconfig.json
common/src/: index.ts
doctrine/: index.d.ts  package-lock.json  package.json
doctrine/lib/: doctrine.js  test.js  typed.js
grammars/: cfg.yml  codeblock.yml  doc.yml  escript.yml
native/: CMakeLists.txt  jest.config.js  package-lock.json  package.json  tsconfig.json
native/cpp/: LSPDocument.cc  LSPDocument.h  LSPWorkspace.cc  LSPWorkspace.h  binding.cc
native/cpp/compiler/: CompletionBuilder.cc  CompletionBuilder.h  DefinitionBuilder.cc  DefinitionBuilder.h  DocumentSymbolsBuilder.cc  DocumentSymbolsBuilder.h  HoverBuilder.cc  HoverBuilder.h  JsonAstBuilder.cc  JsonAstBuilder.h  ReferencesBuilder.cc  ReferencesBuilder.h  ReferencesFinder.cc  ReferencesFinder.h  SemanticContextBuilder.h  SemanticContextFinder.cc  SemanticContextFinder.h  SignatureHelpBuilder.cc  SignatureHelpBuilder.h  SourceLocationComparator.cc  SourceLocationComparator.h
native/cpp/misc/: XmlDocParser.cc  XmlDocParser.h
native/cpp/napi/: ExtensionConfig.cc  ExtensionConfig.h  LSPDocument.cc  LSPDocument.h  LSPWorkspace.cc  LSPWorkspace.h
native/src/: index.ts
native/test/: native.spec.ts
native/test/format-srcs/: README.md  fmt01.out.src  fmt01.src  fmt02.out.src  fmt02.src  fmt03.out.src  fmt03.src  fmt04.out.src  fmt04.src  fmt05.out.src  fmt05.src  fmt06.out.src  fmt06.src  fmt07.out.src  fmt07.src  fmt08.out.src  fmt08.src  fmt09.out.src  fmt09.src
server/: jest.config.js  package-lock.json  package.json  tsconfig.json
server/src/: case-changer.ts  commands.ts  config-parser.ts  distro-sources.ts  index.ts  parser.ts  semantics.ts  server.ts  test.ts  utils.ts  workspace.ts
server/src/grammars/: AsyncParseTreeVisitor.ts  EscriptLooseParserRuleContext.ts  EscriptParserImpl.ts  EscriptParserVisitorImpl.ts  ast-types.ts  ast-visitor.ts
server/src/misc/: Utils.ts
server/src/prettier-plugin/: index.ts
server/src/semantics/: analyzer.ts  pt-visitor.ts
server/src/server/: connection.ts  workspace.ts
server/src/util/: index.ts
server/src/workspace/: DocsDownloader.ts  source-file.ts  workspace.ts
server/test/: DocsDownloader.spec.ts  Formatter.spec.ts  source-file.spec.ts  workspace.spec.ts
specs/: extension.spec.ts
src/: extension.ts
